# UniversityCourseManagementSystem

./: Admin.cpp  Admin.h  Admindashboard.cpp  Admindashboard.h  AuthenticationManager.cpp  AuthenticationManager.h  CMakeLists.txt  Course.cpp  Course.h  CourseManager.cpp  CourseManager.h  Professor.cpp  Professor.h  Professordashboard.cpp  Professordashboard.h  README.md  Student.cpp  Student.h  Studentdashboard.cpp  Studentdashboard.h  UI.cpp  UI.h  datastore.cpp  datastore.h  main.cpp  mainwindow.cpp  mainwindow.h
